--- a/src/main/resources/flyway/sit.properties
+++ b/src/main/resources/flyway/sit.properties
@@ -1,5 +1,5 @@
 flyway.driver=org.h2.Driver
-flyway.url=jdbc:h2:tcp://localhost/~/h2data/test
+flyway.url=jdbc:h2:~/test
 flyway.schemas=demo
 flyway.user=sa
 flyway.password=
