--- a/src/main/resources/flyway/sit.properties
+++ b/src/main/resources/flyway/sit.properties
@@ -1,5 +1,5 @@
 flyway.driver=org.h2.Driver
-flyway.url=jdbc:h2:~/test
-flyway.schemas=demo
+flyway.url=jdbc:h2:tcp://localhost/~/test
+flyway.schemas=DEMO,TEST
 flyway.user=sa
 flyway.password=
